test/pp_err.c
// R %cc %s

// error: token pasting cannot produce comments
// #define COMM1 / ## /
// COMM1
